[package]
name = "databases-performance"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
async-trait = "0.1.83"
chrono = "0.4.39"
dotenv = "0.15.0"
futures = "0.3.31"
mongodb = "3.1.0"
serde = "1.0.216"
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["mysql", "postgres"] }
thiserror = "2.0.6"
tokio = "1.42.0"
